src/objects/Clipping__c.object
<CustomObject>
    <description>Track media mentions in Salesforce.com</description>
    <fields>
        <fullName>Author__c</fullName>
        <inlineHelpText>Look up the Contact who authored this clipping</inlineHelpText>
        <label>Author</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Clippings</relationshipLabel>
        <relationshipName>Clippings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Campaign__c</fullName>
        <inlineHelpText>Campaign this clipping is related to</inlineHelpText>
        <label>Campaign</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>Clippings</relationshipLabel>
        <relationshipName>Clippings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Clipping_Content__c</fullName>
        <inlineHelpText>Content blurb from the clipping</inlineHelpText>
        <label>Clipping Content</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Clipping_URL__c</fullName>
        <inlineHelpText>Web location (URL) where this clipping was found</inlineHelpText>
        <label>Clipping URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Filing_Location__c</fullName>
        <inlineHelpText>Physical filing location if not an online clipping</inlineHelpText>
        <label>Filing Location</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Issue_Interests__c</fullName>
        <description>Keep this picklist consistent with issue interests picklists elsewhere</description>
        <inlineHelpText>Issues that this clipping relates to</inlineHelpText>
        <label>Issue Interests</label>
        <picklist>
            <picklistValues>
                <fullName>Issue 1</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Letter_to_Editor__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Is this clipping a letter to the editor?</inlineHelpText>
        <label>Letter to Editor</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Permission__c</fullName>
        <inlineHelpText>Select the level of permission granted by Author and/or Publisher (as appropriate) to quote, re-print, etc.  Paste permission details into Notes &amp; Attachments, using the New Note button.</inlineHelpText>
        <label>Permission?</label>
        <picklist>
            <picklistValues>
                <fullName>None</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Limited</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unlimited</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Publish_Date__c</fullName>
        <defaultValue>Today()</defaultValue>
        <inlineHelpText>Date this clipping was published</inlineHelpText>
        <label>Publish Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Publisher__c</fullName>
        <inlineHelpText>Look up the Organization that published this clipping</inlineHelpText>
        <label>Publisher</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Clippings</relationshipLabel>
        <relationshipName>Clippings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Video__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Is this clipping (or does it include) video?</inlineHelpText>
        <label>Video</label>
        <type>Checkbox</type>
    </fields>
    <label>Clipping</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Clipping_URL__c</columns>
        <columns>Publish_Date__c</columns>
        <columns>Issue_Interests__c</columns>
        <columns>Publisher__c</columns>
        <columns>Campaign__c</columns>
        <columns>Author__c</columns>
        <columns>Letter_to_Editor__c</columns>
        <columns>Video__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>ThisWeeksClippings</fullName>
        <columns>NAME</columns>
        <columns>Clipping_URL__c</columns>
        <columns>Clipping_Content__c</columns>
        <columns>Letter_to_Editor__c</columns>
        <columns>Video__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK,LAST_WEEK</value>
        </filters>
        <label>This Week&apos;s Clippings</label>
    </listViews>
    <nameField>
        <label>Clipping Title</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Clippings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>